Updated layout for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <p class="para m-2">Navaratri and Dasara are festivals that celebrate the victory of good over evil and the power of devotion. Navaratri, observed for nine nights, honors the nine forms of Goddess Durga with prayers, music, and dance. The celebrations end with Dasara (Vijayadashami), marking Durga’s triumph over Mahishasura and Rama’s victory over Ravana. These festivals inspire faith, courage, and righteousness, uniting people through spirituality and cultural traditions.</p>
                 </div>
                 <div class="col-12">
-                    <div class="d-flex flex-row justify-content-between">
+                    <div class="d-flex flex-row justify-content-center">
                         <img src="https://i.postimg.cc/sDQdqkzw/Gemini-Generated-Image-k8y236k8y236k8y2.png" class="image" />
                     </div>
                 </div>
